Utworzono za pomocą Colaboratory

--- a/lecture1_intro.ipynb
+++ b/lecture1_intro.ipynb
@@ -197,16 +197,15 @@
         " to Github? <br>\n",
         "* Go to https://github.com/ and sign up <br>\n",
         "* Create new repository by clicking “Repositories” and then “New”:<br>\n",
-        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture1/10000201000009DE000002BEC873C2CCFF32F83F.png' img_width=450px>\n",
+        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture1/10000201000009DE000002BEC873C2CCFF32F83F.png' width=450px>\n",
         "<br>\n",
         "\n",
         "* Type the repository name and click “Create repository”:<br>\n",
         "\n",
         "\n",
         "**Saving the notebook to the Github repository:** <br>\n",
-        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture1/1000020100000A04000005C0D12108EDDC331620.png' img_width=450px>\n",
-        "<br>\n",
-        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture1/10000201000009EA000006306582693D7EB23AFC.png' img_width=450px>\n",
+        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture1/1000020100000A04000005C0D12108EDDC331620.png' width=450px>\n",
+        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture1/10000201000009EA000006306582693D7EB23AFC.png' width=450px>\n",
         "\n",
         "**Running example from Github** <br>\n",
         "Open a github repository: <br> \n",
@@ -226,19 +225,127 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **<font color=\"green\">Open THIS lecture notebook:**\n"
+        "## **<font color=\"green\">Open THIS lecture notebook:**\n",
+        "* https://github.com/marcinwolter/Machine-learning-KISD-2022\n",
+        "* lecture1_intro.ipynb\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "Run the short code below:"
       ],
       "metadata": {
         "id": "KCcqeqvBftUH"
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import scipy.stats as stats\n",
+        "\n",
+        "mu = -1\n",
+        "std = 1\n",
+        "x = np.linspace(start=-4, stop=4, num=100)\n",
+        "y = stats.norm.pdf(x, mu, std) \n",
+        "plt.plot(x, y)\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "nGHopTMKg90l"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        ""
+        "## **<font color=\"red\">Good!!! Now you know how to use GoogleColaboratory!!!**\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "**So, go back to our statistics and machine learning.**"
+      ],
+      "metadata": {
+        "id": "mfmlpQJYiav1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **<font color=\"green\">About the course:**\n",
+        "\n",
+        "* We will have 20 hours of lectures in total.\n",
+        "\n",
+        "* I propose to do some exercises, run some python programs on google colaboratory. So please use your laptops!\n",
+        "\n",
+        "* We should make some type of exam. I propose, that instead of a regular exam you will prepare small projects using machine learning. This gives a chance to learn how to use machine learning tools. "
+      ],
+      "metadata": {
+        "id": "Lb2F99NciX1I"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **<font color=\"green\">Statistics**\n",
+        "\n",
+        "\n",
+        "* Statistics  –science of collecting and analyzing numerical data.\n",
+        "* First works –  أبو يوسف يعقوب بن إسحاق الصبّاح الكندي Al-Kindi (801-873) - used statistical methods to break the Caesar cipher by analyzing the frequency of letters in the text.\n",
+        "\n",
+        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture1/100002010000025A000003ADB5DE4B4B1B31D145.png' height=450px>\n",
+        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture1/100002010000014700000148E298930E9B5C3DE1.png' height=450px>"
       ],
       "metadata": {
         "id": "g2SSd_pMffAs"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **<font color=\"green\">Caesar cipher**\n",
+        "* Each letter in the text is replaced by another, but shifted by *n* letters:\n",
+        "\n",
+        " \n",
+        "| **A** \t| **B** \t| **C** \t| **D** \t| **E** \t| **F** \t| **G** \t| **H** \t| **I** \t| **J** \t| **K** \t|\n",
+        "|:-----:\t|:-----:\t|:-----:\t|:-----:\t|:-----:\t|:-----:\t|:-----:\t|:-----:\t|:-----:\t|:-----:\t|:-----:\t|\n",
+        "| **C** \t| **D** \t| **E** \t| **F** \t| **G** \t| **H** \t| **I** \t| **J** \t| **K** \t| **L** \t| **M** \t| \n",
+        " \n",
+        "\n",
+        "* In general – replacement cipher (each letter is replaced by another, but always the same letter)\n",
+        " \n",
+        "| **A** \t| **B** \t| **C** \t| **D** \t| **E** \t| **F** \t| **G** \t| **H** \t| **I** \t| **J** \t| **K** \t|\n",
+        "|:-----:\t|:-----:\t|:-----:\t|:-----:\t|:-----:\t|:-----:\t|:-----:\t|:-----:\t|:-----:\t|:-----:\t|:-----:\t|\n",
+        "| **D** \t| **E** \t| **G** \t| **H** \t| **I** \t| **M** \t| **T** \t| **L** \t| **K** \t| **J** \t| **Z** \t| \n",
+        " \n",
+        "\n",
+        "* Frequency analysis – investigation, how frequently each symbols appears in text.\n",
+        "<center>\n",
+        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture1/100002010000027B0000005D2FDE33FFF5F30C0D.png' width=450px>\n",
+        "</center>\n",
+        "<center>\n",
+        "Frequency of appearance of different letters in English.\n",
+        "</center>"
+      ],
+      "metadata": {
+        "id": "gbUK7SVDoukO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **<font color=\"green\">Great statistics course**\n",
+        "* Fantastic Glen Cowan’s courses on statistics can be found here:\n",
+        " * http://www.pp.rhul.ac.uk/~cowan/stat_cern.html\n",
+        " * https://www.pp.rhul.ac.uk/~cowan/stat_course.html\n",
+        "* and his book can be found here:\n",
+        " * http://www.sherrytowers.com/cowan_statistical_data_analysis.pdf"
+      ],
+      "metadata": {
+        "id": "yUGjs8ypw8bD"
       }
     },
     {
