Utworzono za pomocą Colaboratory

--- a/lecture1_intro.ipynb
+++ b/lecture1_intro.ipynb
@@ -260,7 +260,7 @@
         "id": "nGHopTMKg90l",
         "outputId": "29c81f86-9168-411a-e4b6-650b18c97d1e"
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1003,7 +1003,7 @@
         "id": "0V6hCY6ACq7N",
         "outputId": "38fb93e4-2bc6-4dae-a559-a6730af8a4f1"
       },
-      "execution_count": 106,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1063,7 +1063,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 107,
+      "execution_count": null,
       "metadata": {
         "id": "W1oZVahYJ5u6"
       },
@@ -1088,7 +1088,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 108,
+      "execution_count": null,
       "metadata": {
         "id": "JeYaCQ2kJ5u8"
       },
@@ -1111,7 +1111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 109,
+      "execution_count": null,
       "metadata": {
         "id": "s07BqGCOJ5u9",
         "outputId": "a72498b0-47a9-4d0f-c479-6328ad06505a",
@@ -1163,7 +1163,7 @@
       "metadata": {
         "id": "CemgWkZwLLKZ"
       },
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1177,7 +1177,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 111,
+      "execution_count": null,
       "metadata": {
         "id": "COnQx3RDJ5u-"
       },
@@ -1222,7 +1222,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 112,
+      "execution_count": null,
       "metadata": {
         "id": "4Hi3Sj88J5u_",
         "outputId": "9eef001a-71b1-4f1c-f53f-7690e4f6d632",
@@ -1252,7 +1252,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 113,
+      "execution_count": null,
       "metadata": {
         "id": "2MhvzAiNJ5vA",
         "outputId": "ef9253b5-7db3-441c-9c27-335f0dcff109",
@@ -1287,7 +1287,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 114,
+      "execution_count": null,
       "metadata": {
         "id": "_H2JDKRMJ5vA",
         "outputId": "0985f8cb-91a4-4c87-94b1-7a695e8a48e9",
@@ -1319,7 +1319,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 115,
+      "execution_count": null,
       "metadata": {
         "id": "h2a5fS1XJ5vB",
         "outputId": "80eded6f-e03b-4ee9-eed9-436cee7840cd",
@@ -1354,7 +1354,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 116,
+      "execution_count": null,
       "metadata": {
         "id": "3g5nKnzDJ5vB"
       },
@@ -1365,7 +1365,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 117,
+      "execution_count": null,
       "metadata": {
         "id": "nWFzGnkvJ5vC",
         "outputId": "d2d1e2fb-f652-43f4-97a2-50a86cba8d1b",
@@ -1587,7 +1587,7 @@
       "source": [
         "%matplotlib inline"
       ],
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1614,7 +1614,7 @@
         "from sklearn.datasets import load_digits\n",
         "digits = load_digits()"
       ],
-      "execution_count": 119,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1651,7 +1651,7 @@
         "    # label the image with the target value\n",
         "    ax.text(0, 7, str(digits.target[i]))"
       ],
-      "execution_count": 120,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1696,7 +1696,7 @@
         "plt.scatter(proj[:, 0], proj[:, 1], c=digits.target.astype(int), cmap=plt.get_cmap('Paired', 10), vmin=-0.5, vmax=9.5)\n",
         "plt.colorbar()"
       ],
-      "execution_count": 121,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1749,7 +1749,7 @@
         "\n",
         "proj = pca.fit_transform(digits.data)"
       ],
-      "execution_count": 122,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1770,7 +1770,7 @@
         "fig, ax = plt.subplots(tight_layout=True)\n",
         "ax.bar( [x for x in range(principal.size)], principal)\n"
       ],
-      "execution_count": 123,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1842,7 +1842,7 @@
         "\n",
         "proj = pca.fit_transform(digits.data)"
       ],
-      "execution_count": 124,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1863,7 +1863,7 @@
         "fig, ax = plt.subplots(tight_layout=True)\n",
         "ax.bar( [x for x in range(principal.size)], principal)\n"
       ],
-      "execution_count": 125,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1914,7 +1914,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 126,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1975,7 +1975,7 @@
         "    else:\n",
         "        ax.text(0, 7, str(expected[i])+\" \"+str(predicted[i]), color='red')"
       ],
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2028,7 +2028,7 @@
         "matches = (predicted == expected)\n",
         "print(matches.sum())"
       ],
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2061,7 +2061,7 @@
       "source": [
         "print(len(matches))"
       ],
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2094,7 +2094,7 @@
       "source": [
         "matches.sum() / float(len(matches))"
       ],
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2131,7 +2131,7 @@
         "from sklearn import metrics\n",
         "print(metrics.classification_report(expected, predicted))"
       ],
-      "execution_count": 131,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2182,7 +2182,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2235,7 +2235,7 @@
         "              interpolation='nearest')\n",
         "\n"
       ],
-      "execution_count": 133,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2289,7 +2289,7 @@
         "    else:\n",
         "        ax.text(0, 7, str(expected[i])+\" \"+str(predicted[i]), color='red')"
       ],
-      "execution_count": 134,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2302,6 +2302,38 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "# **End of example**\n",
+        "\n",
+        "---\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "5lLlnBZOmAJ2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# <font color='green'> **Summary**\n",
+        "\n",
+        "* <span style=\"color:#000000\">What is machine learning</span>\n",
+        "* <span style=\"color:#000000\">Classifiers:</span>\n",
+        "  * <span style=\"color:#000000\">Cuts</span>\n",
+        "  * <span style=\"color:#000000\">Naive Bayes</span>\n",
+        "  * <span style=\"color:#000000\">Fisher Linear Discriminants</span>\n",
+        "* <span style=\"color:#000000\">Simple unsupervised method – PCA.</span>\n"
+      ],
+      "metadata": {
+        "id": "7CfnYd6smGMh"
+      }
     }
   ],
   "metadata": {
