Utworzono za pomocą Colaboratory

--- a/lecture2.ipynb
+++ b/lecture2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "lecture2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMdHd/DgmJ9dakSrlV8s6Pm",
+      "authorship_tag": "ABX9TyMgtC/34YPHw5Ru76LIzKHV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -121,10 +121,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The square-root of a matrix C is the matrix C'\n",
-        "that multiplied with itself yields $C:~~C = (C' * C')$.\n",
-        "We compute the square-root matrix by using the *scipy.linalg.sqrtm()* function and than invert it using *np.linalg.inv()*. The decorrelation is given by:\n",
+        "# **How to decorrelate?**\n",
+        "\n",
+        "C is a covariance matrix. The decorrelated dataset $x$ is given by:\n",
         "$$x ⟶ (C')^{−1}x $$ \n",
+        "\n",
+        "where $C'$ is the square-root of covariance matrix C. \n",
+        "It is a matrix \n",
+        "that multiplied with itself yields $C:~~C = (C' * C')$.<br>\n",
+        "We compute the square-root matrix by using the *scipy.linalg.sqrtm()* function and than invert it using *np.linalg.inv()*. \n",
         "\n"
       ],
       "metadata": {
@@ -471,9 +476,9 @@
         "\n",
         "* <span style=\"color:#000000\">**Unfortunately:** </span>  <span style=\"color:#000000\"> __sensitive for fluctuations\\, unstable__ </span>  <span style=\"color:#000000\">\\. </span>\n",
         "\n",
-        "![](https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture2/MachineLearning2020_234.png)\n",
+        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture2/MachineLearning2020_234.png' width=350px>\n",
         "\n",
-        "![](https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture2/MachineLearning2020_235.png)\n",
+        "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture2/MachineLearning2020_235.png' width=350px>\n",
         "\n",
         "\n"
       ],
