Utworzono za pomocą Colaboratory

--- a/lecture3.ipynb
+++ b/lecture3.ipynb
@@ -1248,8 +1248,7 @@
         "#<font color='green'> **Summary**\n",
         "\n",
         "* ICA - powerfull tool for signal separation\n",
-        "* Allows to get clean signals from a mixt of sources.\n",
-        "* "
+        "* Allows to get clean signals from a mixt of sources.\n"
       ],
       "metadata": {
         "id": "JAHKUSzcq2dm"
@@ -1261,7 +1260,7 @@
       "collapsed_sections": [],
       "name": "lecture3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMEbXkTiu8GubUGsFZUA9tl",
+      "authorship_tag": "ABX9TyMgmecIBawGKE6gDIe2c+V+",
       "include_colab_link": true
     },
     "kernelspec": {
