Utworzono za pomocą Colaboratory

--- a/lecture3.ipynb
+++ b/lecture3.ipynb
@@ -974,9 +974,9 @@
         }
       },
       "source": [
-        "s1 = np.sin(2 * time)\n",
-        "s2 = np.sign(np.sin(3 * time))\n",
-        "s3 = signal.sawtooth(2 * np.pi * time)\n",
+        "s1 = np.sin(2 * time)  # sinus\n",
+        "s2 = np.sign(np.sin(3 * time))  # sign \n",
+        "s3 = signal.sawtooth(2 * np.pi * time) # sawtooth\n",
         "print(s1.shape)"
       ],
       "execution_count": 45,
@@ -1260,7 +1260,7 @@
       "collapsed_sections": [],
       "name": "lecture3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMgmecIBawGKE6gDIe2c+V+",
+      "authorship_tag": "ABX9TyMzsTrGILl+uuKPiV0pGV97",
       "include_colab_link": true
     },
     "kernelspec": {
