Utworzono za pomocą Colaboratory

--- a/lecture5.ipynb
+++ b/lecture5.ipynb
@@ -68,7 +68,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#**Explaining neural networks in raw Python: lectures in Jupiter**\n",
+        "#**Explaining neural networks in raw Python: lectures in Jupyter**\n",
         "**<font color='red'>Highly recommended lecture by prof. Broniowski**\n",
         "\n",
         "These lectures were originally given to undergraduate students of computer engineering at the Jan Kochanowski University in Kielce, Poland, and for the Kraków School of Interdisciplinary PhD Studies.\n",
@@ -1571,7 +1571,7 @@
       "collapsed_sections": [],
       "name": "lecture5.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPcgV6uGLyR5iW0wQ7n1yEz",
+      "authorship_tag": "ABX9TyPI+Z8p8PvlDG1y0gn+F1TS",
       "include_colab_link": true
     },
     "kernelspec": {
