Utworzono za pomocą Colaboratory

--- a/lecture5.ipynb
+++ b/lecture5.ipynb
@@ -340,7 +340,7 @@
         "#<font color='green'>**How to train a multilayer network?**\n",
         "\n",
         "* Minimize the loss function by choosing a set of weights $\\omega$:\n",
-        "$$ R(\\omega) \\frac{1}{N}\\sum_i(Z_i - net(X_i,\\omega_i))^2 $$\n",
+        "$$ R(\\omega) =\\frac{1}{N}\\sum_i(Z_i - net(X_i,\\omega_i))^2 $$\n",
         "where $Z_i$ is true target value, $X_i$ is an input.\n",
         "\n",
         "* Problem – how to correct the weights in the deeper layer, while\n",
@@ -403,22 +403,6 @@
       ],
       "metadata": {
         "id": "7LeETb74jfOp"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "- Simple comparison of many classifiers\n",
-        "  - https://github.com/marcinwolter/MachineLearning2020/blob/master/plot_mnist_filters.ipynb\n",
-        " - Neural network for hand-written digits classification\n",
-        "  - https://github.com/marcinwolter/MachineLearning2020/blob/master/plot_digits_classif_mlp.ipynb\n",
-        " - Visualization of MLP weights\n",
-        "  - https://github.com/marcinwolter/MachineLearning2020/blob/master/plot_mnist_filters.ipynb\n",
-        " - https://playground.tensorflow.org\n",
-        "- Nice NN demonstrator\n"
-      ],
-      "metadata": {
-        "id": "D48eavzmkQil"
       }
     },
     {
@@ -1571,7 +1555,7 @@
       "collapsed_sections": [],
       "name": "lecture5.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPI+Z8p8PvlDG1y0gn+F1TS",
+      "authorship_tag": "ABX9TyOfdzkmoCNjUdLmYurom7lF",
       "include_colab_link": true
     },
     "kernelspec": {
