--- a/lecture6.ipynb
+++ b/lecture6.ipynb
@@ -26,7 +26,7 @@
         "Lecture 6\n",
         "\n",
         "\n",
-        "##**<font color = \"green\">Cluster analysis</font>**\n",
+        "##**<font color = \"green\">Deep Neural Networks</font>**\n",
         "\n",
         "*30 March 2022*\n",
         "\n",
@@ -1893,7 +1893,7 @@
       "collapsed_sections": [],
       "name": "lecture6.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPAcXTdzrGeZLJDSwYPN1y7",
+      "authorship_tag": "ABX9TyMiqiD7kwaDdYgLZHSc3BUM",
       "include_colab_link": true
     },
     "kernelspec": {
