--- a/lecture6.ipynb
+++ b/lecture6.ipynb
@@ -162,7 +162,7 @@
         "\n",
         "<img src='https://raw.githubusercontent.com/marcinwolter/Machine-learning-KISD-2022/main/images/lecture6/MachineLearning2020_64.png' width=450px>\n",
         "\n",
-        "<span style=\"color:#000000\">Solution –  _backpropagation_ </span>. \n",
+        "<span style=\"color:#000000\">**Solution –  *backpropagation*** \n",
         "\n",
         " <span style=\"color:#000000\"> \n",
         "An error  y</span>  <span style=\"color:#000000\"> _\\-f\\(x\\,w\\)_ </span>  <span style=\"color:#000000\"> \n",
@@ -1893,7 +1893,7 @@
       "collapsed_sections": [],
       "name": "lecture6.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMiqiD7kwaDdYgLZHSc3BUM",
+      "authorship_tag": "ABX9TyOxHGinWrrh5Bcq+7UBKcPQ",
       "include_colab_link": true
     },
     "kernelspec": {
