Utworzono za pomocą Colaboratory

--- a/lecture7.ipynb
+++ b/lecture7.ipynb
@@ -6,7 +6,7 @@
       "name": "lecture7.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPTWiQc/Oo2v1P+grYkRWJS",
+      "authorship_tag": "ABX9TyPWCAu8q0rc0ISc8venaAy0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -127,8 +127,8 @@
         "\n",
         "**Test accuracy: 98.42%**\n",
         "\n",
-        "###**Question:**\n",
-        "**Can we improve this result?**"
+        "#<font color='red'>**Question:**\n",
+        "##<font color='red'>**Can we improve this result?**"
       ],
       "metadata": {
         "id": "q6E4YN6qAxe6"
@@ -307,6 +307,19 @@
     {
       "cell_type": "markdown",
       "source": [
+        "#**Nice blog entry about convolutional neural networks:**\n",
+        "\n",
+        "https://towardsdatascience.com/convolutional-neural-networks-explained-9cc5188c4939\n",
+        "\n",
+        "<img src='https://miro.medium.com/max/1400/1*kkyW7BR5FZJq4_oBTx3OPQ.png' width=650px>"
+      ],
+      "metadata": {
+        "id": "yYuYJzDb-Sp6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "\n",
         "\n",
         "#**Back to our digits recognition with CNN…**\n",
@@ -374,7 +387,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -411,7 +424,7 @@
         "    # label the image with the target value\n",
         "    ax.text(0, 7, str(y_train0[i]))"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -435,7 +448,7 @@
       "metadata": {
         "id": "z6xKo9A-H9ez"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -491,7 +504,7 @@
         "model.summary()\n",
         "\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -550,7 +563,7 @@
         "plot_model(model, to_file='model_plot.png', show_shapes=True, show_layer_names=True)\n",
         "Image('model_plot.png')"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -585,7 +598,7 @@
         "                    verbose=1,\n",
         "                    validation_data=(x_test, y_test))\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -662,7 +675,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -710,7 +723,7 @@
         "plt.legend(['train','validation'])\n",
         "plt.show()\n"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -740,7 +753,7 @@
         "print('Test loss:', score[0])\n",
         "print('Test accuracy:', score[1])"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -769,7 +782,7 @@
         "\n",
         "print(\"Accuracy Train: %.2f%% , Test: %.2f%% \" % (scores_train[1]*100, scores_test[1]*100 ))"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -806,7 +819,7 @@
         "print(cm)\n",
         "\n"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -852,7 +865,7 @@
         "sn.heatmap(df_cm, annot=True,annot_kws={\"size\": 12})# font size\n",
         "plt.show()\n"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -901,7 +914,7 @@
         "    else:\n",
         "        ax.text(0, 7, str(expected[i])+\" \"+str(np.argmax(predicted[i])), color='red')"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -940,7 +953,7 @@
         "imgplot = plt.imshow(img,)\n",
         "plt.show()\n"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1168,7 +1181,7 @@
         "from keras.models import load_model\n",
         "from keras.preprocessing.image import ImageDataGenerator"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1198,7 +1211,7 @@
         "    plt.imshow(x_train[i])\n",
         "plt.show()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1239,7 +1252,7 @@
         "    )\n",
         "datagen.fit(x_train)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1265,7 +1278,7 @@
         "\n",
         "   "
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1314,7 +1327,7 @@
         "plt.show()\n",
         "    \n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1348,7 +1361,7 @@
         "print(x_train.shape[0], 'train samples')\n",
         "print(x_test.shape[0], 'test samples')"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1375,7 +1388,7 @@
         "x_test=(x_test-mean)/std\n",
         "x_train=(x_train-mean)/std"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1395,7 +1408,7 @@
         "y_test  = tf.keras.utils.to_categorical(y_test, num_classes)\n",
         "print(y_train.shape)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1459,7 +1472,7 @@
         "\n",
         "model.compile(loss='categorical_crossentropy', metrics=['accuracy'],optimizer=opt)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1483,7 +1496,7 @@
       "source": [
         "model.summary()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1573,7 +1586,7 @@
         "# training without augmentation\n",
         "history=model.fit(x_train, y_train, batch_size=128, epochs=100, validation_data=(x_test, y_test))"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1797,7 +1810,7 @@
         "train_acc=model.evaluate(x_train,y_train,batch_size=128)\n",
         "train_acc"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1834,7 +1847,7 @@
         "    plt.legend(['train', 'test'], loc='upper left')\n",
         "    plt.show()"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1850,7 +1863,7 @@
       "source": [
         "plothist(history)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1875,7 +1888,7 @@
         "#model.save('cifar10_01.h5')                  \n",
         "#model=load_model('cifar10_01.h5')"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1930,7 +1943,7 @@
         "\n",
         "model2.compile(loss='categorical_crossentropy', metrics=['accuracy'],optimizer=opt2)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1954,7 +1967,7 @@
       "source": [
         "model2.summary()"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2044,7 +2057,7 @@
         "history2=model2.fit_generator(datagen.flow(x_train, y_train, batch_size=128),\n",
         "                    steps_per_epoch = len(x_train) / 128, epochs=200, validation_data=(x_test, y_test))"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2476,7 +2489,7 @@
       "source": [
         "#model2.save('cifar10_02.h5')         # about 90% accuracy"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2492,7 +2505,7 @@
       "source": [
         "plothist(history2)  # 128 batch, 0.001 lr, "
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2522,7 +2535,7 @@
         "model2_test_acc=model2.evaluate(x_test,y_test,batch_size=128)\n",
         "model2_test_acc"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2557,7 +2570,7 @@
         "model2_train_acc=model2.evaluate(x_train,y_train,batch_size=128)\n",
         "model2_train_acc"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2631,7 +2644,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2669,7 +2682,7 @@
         "print(cm)\n",
         "\n"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2699,6 +2712,19 @@
       ],
       "metadata": {
         "id": "KfR5vGeJSN3I"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#<font color='red'>**Exercise**\n",
+        "\n",
+        "* Build your own convolutional neural network to recognize elements from the \"Fashion MNIST\" dataset: https://keras.io/api/datasets/fashion_mnist/\n",
+        "* Implement **augmentation** in this code.\n",
+        "* A volunteer will present her/his code."
+      ],
+      "metadata": {
+        "id": "sWlDRBj_ARn5"
       }
     }
   ]
