Utworzono za pomocą Colaboratory

--- a/lecture8.ipynb
+++ b/lecture8.ipynb
@@ -6,7 +6,7 @@
       "name": "lecture8.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNIQ9N1gq8r8xi/h83hXC86",
+      "authorship_tag": "ABX9TyOBZqZVngRyD0pUUPAoUolf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3892,6 +3892,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#**Read MNIST data**"
+      ],
+      "metadata": {
+        "id": "_mPPKeFgBbkM"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -3926,14 +3935,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#**Build model depending on hyperparameters *kt.HyperParameters()***"
+      ],
+      "metadata": {
+        "id": "dwuSBjZoBqWk"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "'''\n",
+        "    # This are parameters optimized by optuna, we do the same below\n",
         "    units = int(trial.suggest_discrete_uniform(\"units1\", 32,1024,1))\n",
         "    dropout = trial.suggest_uniform('dropout1', .00,.50)\n",
         "    act = trial.suggest_categorical('activation', ['relu','sigmoid','linear'])\n",
         "    lr = trial.suggest_float(\"learning_rate\", 1e-5, 1e-1, log=True)\n",
-        "    epochs = int(trial.suggest_discrete_uniform('epochs', 10,50,1))\n",
         "'''\n",
         "\n",
         "def build_model(hp):\n",
@@ -3985,6 +4003,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#**Prepare the search space**"
+      ],
+      "metadata": {
+        "id": "CYvWw80MB5d2"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#select a tuner class to run the search. You may choose from RandomSearch, BayesianOptimization\n",
@@ -4031,7 +4058,7 @@
         "id": "d_f4JCktm42G"
       },
       "source": [
-        "# Find the best parameters"
+        "# **Find the best parameters**"
       ]
     },
     {
