Utworzono za pomocą Colaboratory

--- a/lecture8.ipynb
+++ b/lecture8.ipynb
@@ -6,7 +6,7 @@
       "name": "lecture8.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOBZqZVngRyD0pUUPAoUolf",
+      "authorship_tag": "ABX9TyNgl/eiHxY45vbiboPu0ZE+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,9 +70,9 @@
         "#<font color='green'>**Program for today:**\n",
         "\n",
         "\n",
-        "###  <font color='red'>Hyperparameter optimalization\n",
+        "* ###  <font color='red'>k-folding - using all data for training\n",
+        "* ###  <font color='red'>Hyperparameter optimalization\n",
         "\n",
-        "###  <font color='red'>k-folding - using all data for training\n",
         "\n",
         "<br>\n",
         "\n",
