Utworzono za pomocą Colaboratory

--- a/lecture8.ipynb
+++ b/lecture8.ipynb
@@ -6,7 +6,7 @@
       "name": "lecture8.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNgl/eiHxY45vbiboPu0ZE+",
+      "authorship_tag": "ABX9TyPwpvCCBxcbGtmfQAiqux5A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +45,7 @@
         "**Lecture 8**\n",
         "\n",
         "\n",
-        "##**<font color = \"green\">Convolutional Deep Neural Networks</font>**\n",
+        "##**<font color = \"green\">Hyperparameter optimalization and k-folding</font>**\n",
         "\n",
         "*20 April 2022*\n",
         "\n",
@@ -3597,7 +3597,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 562
+          "height": 542
         },
         "outputId": "da7fb06f-9af3-4008-8ab5-0c5616472171",
         "id": "K4kTTbq6WZDL"
